# simple-astro-cap

./: .gitignore  CLAUDE.md  INSTALL.md  PLAN.md  PROMPT.txt  README.md  pyproject.toml  requirements.txt  run.py
src/simple_astro_cap/: __init__.py  __main__.py  app.py  settings.py
src/simple_astro_cap/camera/: __init__.py  abc.py  multi.py
src/simple_astro_cap/camera/asi/: backend.py  constants.py  sdk.py
src/simple_astro_cap/camera/playerone/: backend.py  constants.py  sdk.py
src/simple_astro_cap/camera/qhy/: __init__.py  backend.py  constants.py  sdk.py
src/simple_astro_cap/camera/sim/: __init__.py  backend.py
src/simple_astro_cap/camera/touptek/: backend.py  constants.py  sdk.py
src/simple_astro_cap/gui/: __init__.py  camera_panel.py  display_bridge.py  histogram.py  live_view.py  main_window.py  recording_panel.py  shortcuts.py
src/simple_astro_cap/pipeline/: __init__.py  abc.py  auto_exposure.py  simple.py
src/simple_astro_cap/recording/: __init__.py  abc.py  mkv_recorder.py  png_recorder.py  ser_recorder.py
src/simple_astro_cap/util/: units.py
